2008-09-28  Miguel de Icaza <miguel@novell.com> 

	

2008-09-28  Miguel de Icaza <miguel@novell.com> 

	Added new files for a GUI Gtk# csharp command line interpreter,
	based on Aaron's BooShell for Banshee and the `csharp' command
	line tool.

	The idea is to turn this into a module that can be attached into
	Gtk# applications.