@@ -37,6 +37,7 @@
     <Reference Include="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="Mono.CSharp" />
+    <Reference Include="Mono.Management" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -51,6 +52,8 @@
     <Compile Include="MainWindow.cs" />
     <Compile Include="gtk-gui\Mono.CSharp.Gui.MainWindow.cs" />
     <Compile Include="History.cs" />
+    <Compile Include="ProcessSelector.cs" />
+    <Compile Include="gtk-gui\Mono.CSharp.Gui.ProcessSelector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
